test/valid_codesnipsets/call_float64_func_with_int_arg.go
package main

import "fmt"

func main() {
    foo(42)
}

func foo(a float64) {

}