test/type_errors/assign_float64_to_int.go
package main

import "fmt"

func main(){
    var a int = 42
    var f float64 = a
}